# aho-corasick

./: .gitignore  CMakeLists.txt  README.md  test.cpp
src/: aho_corasick.cpp  aho_corasick.h
